# openemissions

./: .gitmodules  README.md  codec.c  codec.h  config.h  impl.h  impl_arduino.cpp  input.c  makefile  noiscillate.c  output.c
emap/: .gitignore  Common.hpp  DriverThread.hpp  FLAC_XMP.cpp  FLAC_XMP.hpp  GUI.cpp  GUI.hpp  IQ_Quadrature.txt  Main.cpp  Main.hpp  Makefile  Math.cpp  Math.hpp  Oscilloscope.cpp  Oscilloscope.hpp  PeriodFinder.cpp  PeriodFinder.hpp  PeriodViewer.cpp  PeriodViewer.hpp  README.md  RtlSdr.cpp  RtlSdr.hpp  SDL.cpp  SDL.hpp  Source.cpp  Source.hpp  Spectrum.cpp  Spectrum.hpp  Test.cpp  Waterfall.cpp  Waterfall.hpp  notes.txt
freesdr/: Block.hpp  BlockImplementationPothos.hpp  CMakeLists.txt  DEVNOTES.txt  README  noiseprofile.cpp
freesdr/cmake/: FreeSDRUtil.cmake
freesdr/include/freesdr/: Block.hpp  LinAlgImplementationArmadillo.hpp  Math.hpp  StreamGraphImplementationGnuRadio.hpp  StreamGraphImplementationPothos.hpp
freesdr/src/freesdr/: .BlockImplementationPothos.cpp.swp  Block.cpp
freesdr/src/freesdr/linalg-armadillo/: LinAlgImplementationArmadillo.hpp
freesdr/src/freesdr/streamgraph-pothos/: StreamGraphImplementationPothos.cpp
freesdr/src/test/: Waterfall.cpp
gr-blocks/python/bindings/: CMakeLists.txt  accumulate_python.cc  histogram_binary_op_python.cc  histogram_difference_python.cc  histogram_python.cc  histogram_solve_python.cc  pad_crop_python.cc  pigpio_sink_python.cc  python_bindings.cc  tagged_stream_histogram_python.cc
gr-blocks/python/bindings/docstrings/: accumulate_pydoc_template.h  histogram_binary_op_pydoc_template.h  histogram_difference_pydoc_template.h  histogram_pydoc_template.h  histogram_solve_pydoc_template.h  pad_crop_pydoc_template.h  pigpio_sink_pydoc_template.h  tagged_stream_histogram_pydoc_template.h
nyanmap/: NOTES.txt  (+8 more)
(+203 files in other folders)
